# doubao-voice-input-bridge

./: .gitignore  DEVELOPMENT.md  PROBLEM_REPORT.md  README.md  TODO.md  report.md  test_asr.rs  test_frontend_call.html
.github/workflows/: desktop-build.yml  windows-build.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  proto.rs
src-tauri/src/modules/: asr_client.rs  audio.rs  credentials.rs  encoder.rs  file_reader.rs  mod.rs
test-standalone/: Cargo.toml  build.rs
test-standalone/src/: main.rs
