[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2" }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 音频录制
cpal = "0.15"
# Opus 编码
opus = "0.3"
# WebSocket 客户端
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "blocking"] }
# UUID
uuid = { version = "1.0", features = ["v4"] }
# 随机数
rand = "0.8"
# 时间
chrono = "0.4"
# Protobuf
prost = "0.13"
bytes = "1"
# 目录
dirs = "5.0"
# MD5
md5 = "0.7"
# 音频解码
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "aac"] }
