[package]
name = "test-asr-standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
prost = "0.13"
bytes = "1"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1"
opus = "0.3"
hound = "3.5"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
md5 = "0.7"
rand = "0.8"
hex = "0.4.3"

[build-dependencies]
prost-build = "0.13"

[patch.crates-io]
audiopus_sys = { path = "../vendor/audiopus_sys" }
